--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=yourpassword
-DB_NAME=hospital_ams
+DB_PASSWORD=developer
+DB_NAME=hospital
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=8h
 
 # Server Configuration
-PORT=5000
+PORT=3000
