--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,9 @@ JWT_EXPIRES_IN=8h
 
 # Server Configuration
 PORT=5000
+
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
