--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "node-zklib": "^1.3.0",
     "nodemailer": "^7.0.3",
     "winston": "^3.8.2",
-    "zklib": "^0.2.11"
+    "zklib": "^0.2.11",
+    "zkteco-js": "^1.7.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
